--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: python
 python:
-- '3.5'
-- '3.6'
-# notifications:
-#   email:
-#     on_success: change
-#     on_failure: always
+  - 3.6
+  - 3.7
+  - 3.8
+  - "3.6-dev"
+  - "3.7-dev"
+  - "3.8-dev"
+  - "3.9-dev"
 before_install:
   - pip install codecov
 install:
   - pip install ".[test]"
-script: pytest --cov=utilitime
+script: pytest
 after_success:
   - codecov
